--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,16 +1,16 @@
 <%- include('../_header'); -%>
-        <header>
-            <h4>Kizz</h4>
-        </header>
-        <div class="container">
-            <div class="jumbotron text-center">
-                <h1><span class="fa fa-lock"></span>Authentication</h1>
+<header>
+    <h4>Kizz</h4>
+</header>
+<div class="container">
+    <div class="jumbotron text-center">
+        <h1><span class="fa fa-lock"></span>Authentication</h1>
 
-                <p>Login or Register with:</p>
-                <form action="/sigin" method="POST">
-                    <a href="/" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
-                </form>
-            </div>
+        <p>Login or Register with:</p>
+        <form action="/login" method="POST">
+            <button type="submit" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</button>
+        </form>
+    </div>
 
-        </div>
+</div>
 <%- include('../_footer'); -%>
