Crud for quizz database

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,7 @@
         <footer>
-            Develop and design by Clément Garrigues
+            Develop and design by Clément Garrigues - 2019
             <br>
-            I bless the rains down in Africa
+            - I bless the rains down in Africa - 
         </footer>
     </body>
 </html>
