--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -3,5 +3,6 @@
             <br>
             - I bless the rains down in Africa - 
         </footer>
+        <script src="/main.js"></script>
     </body>
 </html>
