--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,8 +1,5 @@
-        <footer>
+        <!--<footer class="footer">
             Develop and design by Clément Garrigues - 2019
-            <br>
-            - I bless the rains down in Africa - 
-        </footer>
-        <script src="/main.js"></script>
+        </footer>-->
     </body>
 </html>
