--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,12 +1,26 @@
 <%- include('../_header'); -%>
 <header>
-    <h4>Kizz</h4>
+    <div class="div-header">
+        <div class="div-icon-title">
+            <img class="img_Icon" src="/img/KizzIcon.png" alt="KizzIcon">
+            <h2>Kizz</h2>
+        </div>
+        <% if(user != null){ %>
+        <div class="div-log">
+            <h6><%=user.username%></h6>
+            <a href='logout'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogOut</button></a>
+        </div>
+        <% }else{ %>
+        <a href='login'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogIn</button></a>
+        <% }%>
+    </div>
 </header>
-<div class="container">
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span>Authentication</h1>
 
-        <p>Login or Register with:</p>
+<div class="container center">
+    <div class="jumbotron text-center">
+        <h1><span class="fa fa-lock"></span> Authentication</h1>
+
+        <h4>Login or Register with:</h4>
         <form action="/login" method="POST">
             <button type="submit" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</button>
         </form>
