--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,3 +1,107 @@
+.div-header{
+    background-color: #3f51b5;
+    color: #eeeeee;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin : 10 px;
+}
+
+.div-icon-title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.div-header img,.div-header button{
+    margin:10px;
+}
+
+.img_Icon{
+    width: 10%;
+}
+
+.div-log{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+
+.div-log h6{
+    margin:5px;
+}
+
+.div-log button {
+    margin:10px;
+}
+
+.img_Show{
+    width: 5%;
+}
+
+
+.demo-list-three {
+    width: 90%;
+    margin: auto;
+    padding-top: 3%;
+    height: fit-content;
+  }
+
+.demo-list-three li{
+    /*display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;*/
+    background-color: #999999;
+    color: #eeeeee;
+    border-radius: 30px;
+    margin : 10px;
+    height: 200px;
+}
+
+
+
+.text-field-show{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: center;
+    height: 200px;
+    width: 100%;
+}
+
+#id_div_li{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+}
+
+.btn-field-show{
+    /*display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;*/
+}
+
+
+.btn-field-show button{
+    width: 30 px;
+    margin: 5px;
+}
+
+.mdl-data-table{
+    color: #999999;
+    border-radius: 10px;
+}
+
+
+.btn-add-quizz{
+    margin: 20px;
+    margin-left: 30px;
+}
 
 .question{
     display: flex;
@@ -5,7 +109,6 @@
     align-items: center;
     justify-content: space-around;
 }
-
 
 .Answer{
     display: flex;
