--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -6,11 +6,11 @@
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
       
-      <link rel="stylesheet" href="/bower_components/material-design-lite/material.min.css">
-      <script src="/bower_components/material-design-lite/material.min.js"></script>
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+      <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-      <link rel="stylesheet" type="text/css" href="/public/css/form.css" />
+      <link rel="stylesheet" type="text/css" href="/css/form.css" />
 
     </head>
     <body>
