--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,15 +2,20 @@
 
 <body>
     <header>
-        <h4>Kizz</h4>
-        <% if(user != null){ %>
-        <h6>
-            <%=user.username%>
-        </h6>
-        <a href='logout'><button>Log Out</button></a>
-        <% }else{ %>
-        <a href='login'><button>Log In</button></a>
-        <% }%>
+        <div class="div-header">
+            <div class="div-icon-title">
+                <img class="img_Icon" src="/img/KizzIcon.png" alt="KizzIcon">
+                <h2>Kizz</h2>
+            </div>
+            <% if(user != null){ %>
+            <div class="div-log">
+                <h6><%=user.username%></h6>
+                <a href='logout'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogOut</button></a>
+            </div>
+            <% }else{ %>
+            <a href='login'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogIn</button></a>
+            <% }%>
+        </div>
     </header>
 
     <div>
