--- a/views/quizz/create.ejs
+++ b/views/quizz/create.ejs
@@ -2,8 +2,22 @@
 
 <body>
     <header>
-        <h4>Kizz</h4>
+        <div class="div-header">
+            <div class="div-icon-title">
+                <img class="img_Icon" src="/img/KizzIcon.png" alt="KizzIcon">
+                <h2>Kizz</h2>
+            </div>
+            <% if(user != null){ %>
+            <div class="div-log">
+                <h6><%=user.username%></h6>
+                <a href='logout'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogOut</button></a>
+            </div>
+            <% }else{ %>
+            <a href='login'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogIn</button></a>
+            <% }%>
+        </div>
     </header>
+
 
     <form action="/quizz/create" method="POST">
 
@@ -25,5 +39,5 @@
         </button>
     </form>
 
-  
+    <script src="/main.js"></script>
     <%- include('../_footer'); -%>
