--- a/views/quizz/show.ejs
+++ b/views/quizz/show.ejs
@@ -10,7 +10,7 @@
             <% if(user != null){ %>
             <div class="div-log">
                 <h6><%=user.username%></h6>
-                <a href='logout'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogOut</button></a>
+                <a href='../logout'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogOut</button></a>
             </div>
             <% }else{ %>
             <a href='login'><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">LogIn</button></a>
