--- a/views/quizz/create.ejs
+++ b/views/quizz/create.ejs
@@ -30,6 +30,14 @@
                 
         </div>
 
+        <div id="div_duration">
+            <div class="mdl-textfield mdl-js-textfield">
+                <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="duration" name="duration">
+                <label class="mdl-textfield__label" for="duration">Questions duration...</label>
+                <span class="mdl-textfield__error">Input is not a number!</span>
+            </div>
+        </div>
+
         <button id='btn_Add_Question' class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
             <i class="material-icons">add</i>
         </button>
