--- a/views/quizz/run.ejs
+++ b/views/quizz/run.ejs
@@ -8,11 +8,111 @@
 
     <div>
         <ul id='liste_player'>
-            <% for (var i=0; i<quizz.player.length; i++){%>
-                <li>
-                    <%= quizz.player[i]%>
-                </li>
-            <%}%>
         </ul>
     </div>
+
+        
+    <button id="begin_Quizz" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+        Begin the quizz
+    </button>  
+
+
+
+    <div>
+        <div id="Text_question">
+        </div>
+        <div id="Time_Left">
+            
+        </div>
+    </div>
+
+    <div>
+        <div id="answer1">
+        </div>
+        <div id="answer2">
+        </div>
+        <div id="answer3">
+        </div>
+        <div id="answer4">
+        </div>
+    </div>
+
+   <div id="result">
+   
+   </div>
+            
+
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script> 
+        var socket = io('/quizz'+<%=quizz.pin%>);
+        socket.on('ackConnection', function(message) {
+                console.log('client run connected');                 
+        });
+        var CurrentPlayers = [];
+        socket.on('Players', function(players) {
+                CurrentPlayers = players;
+                var liPlayer = document.getElementById('liste_player');
+                liPlayer.innerHTML = "";
+                for(var i=0;i<players.length; i++){
+                    liPlayer.innerHTML += '<li>'+players[i]+'</li>';
+                }
+                if (players.length < 2){
+                    document.getElementById("begin_Quizz").style.display = "none";
+                }else{
+                    document.getElementById("begin_Quizz").style.display = "block";
+                }
+        });
+
+        var btnQuizz =  document.getElementById("begin_Quizz");
+        btnQuizz.addEventListener("click", () => {
+            socket.emit("begin",{players : CurrentPlayers});
+
+            socket.on('go',(time) => {
+                document.getElementById('Text_question').innerHTML = '<h2>The battle will begin in '+time+' second</h2>';
+                var timeLeft = time;
+                var IntQuest = setInterval(() => { 
+                    timeLeft --;  
+                    document.getElementById('Text_question').innerHTML = '<h2>The battle will begin in '+timeLeft+' second</h2>';
+                    if (timeLeft <= 0){
+                        clearInterval(IntQuest);
+                    }
+                }, 1000);
+            });
+
+            socket.on('question', (oQuest) => {
+                    var textQuest = oQuest.quest.text;
+                    var aAnswer = [oQuest.quest.response[0],oQuest.quest.response[1],oQuest.quest.response[2],oQuest.quest.response[3]];
+                    var duration = oQuest.time;
+                    var answer = 0;
+
+                    document.getElementById('Text_question').innerHTML = '<h2>'+textQuest+'</h2>';
+                    document.getElementById('Time_Left').innerHTML =  oQuest.time;
+                    document.getElementById('answer1').innerHTML = aAnswer[0];
+                    document.getElementById('answer2').innerHTML = aAnswer[1];
+                    document.getElementById('answer3').innerHTML = aAnswer[2];
+                    document.getElementById('answer4').innerHTML = aAnswer[3];
+
+                    var timeLeft = oQuest.time;
+                    var IntQuest = setInterval(() => { 
+                        timeLeft --;  
+                        document.getElementById('Time_Left').innerHTML = timeLeft;
+                        
+                        if (timeLeft <= 0){
+                            clearInterval(IntQuest);
+                        }
+                    }, 1000);
+
+            });
+
+            socket.on('winner' , (winner) => {
+                console.log(winner);
+                var sPseudo = winner.pseudo;
+                var sScore = winner.score;
+                var message = "<h4>The winner is "+sPseudo+" with the extraordinary score of : "+sScore+"</h4>";
+                document.getElementById('result').innerHTML = message;
+            });
+        });
+
+    </script>
     <%- include('../_footer'); -%>
